RESOLVED FIXED314051
`ASSERTION FAILED: m_wrapper` when visiting pages in Safari in Debug
https://bugs.webkit.org/show_bug.cgi?id=314051
Summary `ASSERTION FAILED: m_wrapper` when visiting pages in Safari in Debug
Chris Dumez
Reported 2026-05-04 21:46:08 PDT
`ASSERTION FAILED: m_wrapper` when visiting pages in Safari in Debug.
Attachments
Chris Dumez
Comment 1 2026-05-04 21:46:15 PDT
Chris Dumez
Comment 2 2026-05-04 21:48:39 PDT
EWS
Comment 3 2026-05-06 01:54:58 PDT
Committed 312677@main (8ee6856c51be): <https://commits.webkit.org/312677@main> Reviewed commits have been landed. Closing PR #64242 and removing active labels.
Anne van Kesteren
Comment 4 2026-05-15 23:01:58 PDT
*** Bug 310813 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.